# Aura

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  interactive.py  pyproject.toml  requirements.txt  simulate.py  termux_simulator.py  ue5_server.py  vde_simulate.py
config/: Hold.txt  biomes.json  conflicts.json  population.json  sdi_factors.json  sounds.json  vde.json
docs/: UE5_INTEGRATION.md  VDE_DESIGN.md  VDI_DESIGN.md
src/: __init__.py  engine.py  pressure_coordinator.py  simulation.py
src/audio/: __init__.py  layer_manager.py  population_pressure.py  sound_selector.py  soundscape.py
src/config/: __init__.py  loader.py  models.py
src/core/: __init__.py  clock.py  state.py
src/memory/: __init__.py  pattern_memory.py  silence_tracker.py  sound_memory.py
src/output/: __init__.py  debug_logger.py  event_logger.py  sdi_logger.py  session_recorder.py
src/sdi/: __init__.py  calculator.py  comfort.py  factors.py
src/utils/: __init__.py  math_utils.py  rng.py  validators.py
src/vde/: __init__.py  attraction_system.py  environmental_wear.py  motion_coherence.py  npc_behavior.py  output_params.py  pressure_coordinator.py  ue5_binding.py  ue5_codegen.py  vde_engine.py  vdi_calculator.py  wildlife.py
tests/: __init__.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_vde_phase1.py  test_vde_phase2.py  test_vde_phase3.py  test_vde_phase4.py  test_vde_phase5.py  test_vde_phase6.py  test_vde_phase7.py  test_vde_phase8.py
ue5_generated/: VDEMPCController.h  VDEPostProcessComponent.h  VDESubsystem.h  VDETypes.h  VDE_NiagaraParameters.json  VDE_Parameters.json
